--- a/microServiceCloudApi/pom.xml
+++ b/microServiceCloudApi/pom.xml
@@ -18,6 +18,10 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
     </dependencies>
 
